# machine-23

./: .codedocs  .travis.yml  CMakeLists.txt  Doxyfile  README  README.md  appveyor.yml  codecov.yaml  doxyfile
app/: CMakeLists.txt  main.cpp
cmake/: CheckBuildType.cmake  CheckCompiler.cmake  CodeCoverage.cmake  EnableModernCxx.cmake
src/: AverageLearner.cpp  AverageLearner.h  CMakeLists.txt  CSV.cpp  CSV.h  DataFrame.cpp  DataFrame.h  DataNode.cpp  DataNode.h  DataSet.cpp  DataSet.h  Ensemble.cpp  Ensemble.h  Error.cpp  Error.h  ErrorFunctions.cpp  ILearner.cpp  ILearner.h  ILerner.h  Testing.h  TreeLearner.cpp  TreeLearner.h
tests/: Boost1D.cpp  CMakeLists.txt  CSV.cpp  DataNode.cpp  DataSet.cpp  Error.cpp  ErrorFunctions.cpp  FitWithPlot1D.cpp  GrowTree1D.cpp  GrowTree2D.cpp  QtCustomPlot.cpp  Tree1D.cpp
